# dot-rewrite

./: .gitignore  README.md
dot-rewrite-engine/: .env.example  README.md  analyze_space.py  pyproject.toml
dot-rewrite-engine/scripts/: seed_letter_corpus.py
dot-rewrite-engine/src/engine/: budget.py  calibration.py  config.py  db.py  drift.py  explain.py  gates.py  models.py  presets.py  roles.py  safeguards.py  space_profile.py
dot-rewrite-engine/src/engine/compress/: rollup.py  signatures.py
dot-rewrite-engine/src/engine/diagnose/: confidence.py  confusion.py  coverage.py  fragmentation.py  integration.py  negative.py  prereq_gap.py
dot-rewrite-engine/src/engine/embed/: __init__.py  encode.py  model.py  semantic_graph.py
dot-rewrite-engine/src/engine/eval/: harness.py
dot-rewrite-engine/src/engine/extract/: __init__.py  centrality.py  concept_extract.py  insights.py  markdown_ast.py  relation_llm.py  relation_spacy.py
dot-rewrite-engine/src/engine/graph/: bridge.py  centrality.py  community.py  isolation.py  knn.py  subcluster.py
dot-rewrite-engine/src/engine/incremental/: local_recompute.py
dot-rewrite-engine/src/engine/ingest/: canonical.py  lemmatize.py  markdown.py  normalize.py  phrases.py  sections.py  stopwords.py
dot-rewrite-engine/src/engine/letters/: __init__.py  discipline.py  manifest.json
dot-rewrite-engine/src/engine/llm/: __init__.py  backend.py  labeler.py
dot-rewrite-engine/tests/: fixtures.py  random_notes.py  test_extensive.py  test_nexus_extract.py  test_production.py  test_smoke.py
dot-rewrite-web/: FEATURES.md  README.md  (+4 more)
(+166 files in other folders)
